--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="assets/icon/kaktus.png"/>
+  <script src="js/models/world.class.js"></script>
   <script src="js/models/drawable-object.class.js"></script>
   <script src="js/models/movable-object.class.js"></script>
   <script src="js/models/character.class.js"></script>
   <script src="js/models/chicken.class.js"></script>
   <script src="js/models/cloud.class.js"></script>
+  <script src="js/models/coins.class.js"></script>
   <script src="js/models/status-bar.class.js"></script>
   <script src="js/models/coin-bar.class.js"></script>
   <script src="js/models/bottle-bar.class.js"></script>
   <script src="js/models/endboss-bar.class.js"></script>
-  <script src="js/models/world.class.js"></script>
   <script src="js/models/background-object.class.js"></script>
   <script src="js/models/keyboard.class.js"></script>
   <script src="js/models/level.class.js"></script>
