--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="js/models/chicken.class.js"></script>
   <script src="js/models/cloud.class.js"></script>
   <script src="js/models/coins.class.js"></script>
+  <script src="js/models/bottles.class.js"></script>
   <script src="js/models/status-bar.class.js"></script>
   <script src="js/models/coin-bar.class.js"></script>
   <script src="js/models/bottle-bar.class.js"></script>
