--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/models/movable-object.class.js"></script>
   <script src="js/models/character.class.js"></script>
   <script src="js/models/chicken.class.js"></script>
+  <script src="js/models/smallChicks.js"></script>
   <script src="js/models/cloud.class.js"></script>
   <script src="js/models/coins.class.js"></script>
   <script src="js/models/bottles.class.js"></script>
