--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
       <section>
         <div class="game-menu-content">
-          <div class="fullScrenn-container">
+          <div class="fullScrenn-sound-content d-none">
             <img src="assets/icon/fullscreen.png" alt="fullscreen">
             <img src="assets/icon/guitar.png" alt="sound">
           </div>
