--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/info-game.css">
   <link rel="stylesheet" href="css/story.css">
   <link rel="stylesheet" href="css/control.css">
+  <link rel="stylesheet" href="css/fullscreen.css">
   <script src="js/models/world.class.js"></script>
   <script src="js/models/drawable-object.class.js"></script>
   <script src="js/models/movable-object.class.js"></script>
@@ -40,9 +41,9 @@
     </div>
   </header>
   <main class="canvas-container">
-    <div>
-      <section>
-        <div>
+    <div id="fullscreen">
+    <section class="width-100">
+        <div id="gameResult">
           <div id="start" class="start">
             <img src="./assets/img/9_intro_outro_screens/start/startscreen_1.png" alt="Start">
           </div>
@@ -84,19 +85,19 @@
             </div>
           </div>
         </div>
-      </section>
-      <section>
+    </section>
+    <section>
         <canvas id="canvas" class="canvas d-none" width="720" height="480"></canvas>
-      </section>
-      <section>
+    </section>
+    <section id="fullScreenMenu">
         <div class="game-menu-content">
-          <div class="fullScrenn-sound-content d-none">
-            <img src="assets/icon/fullscreen.png" alt="fullscreen">
+          <div id="screenAndSound" class="fullScrenn-sound-content d-none">
+            <img id="fullScreenImage" onclick="toggleFullscreen()" src="assets/icon/fullscreen.png" alt="fullscreen">
             <img src="assets/icon/guitar.png" alt="sound">
           </div>
         </div>
-      </section>  
-      <section>
+    </section>  
+    <section>
         <div id="menuBtn" class="game-btn">
           <button onclick="openMenu()" id="menu">Menu</button>
           <button onclick="startGame()">Play</button>
@@ -110,7 +111,7 @@
           <button onclick="restartGame()">Restart Game</button>
           <button onclick="exitGame()">Exit Game</button>
         </div>
-      </section>
+    </section>
     </div>
   </main>
 </body>
