--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="game-menu-content">
           <div id="screenAndSound" class="fullScrenn-sound-content d-none">
             <img id="fullScreenImage" onclick="toggleFullscreen()" src="assets/icon/fullscreen.png" alt="fullscreen">
-            <img src="assets/icon/guitar.png" alt="sound">
+            <img id="soundIcon" onclick="world.toggleSound()" src="assets/icon/guitar.png" alt="sound">
           </div>
         </div>
     </section>  
