--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="assets/icon/kaktus.png"/>
+  <link rel="stylesheet" href="css/standart.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/button.css">
-  <link rel="stylesheet" href="css/info-game.css">
+  <link rel="stylesheet" href="css/home-page-button.css">
+  <link rel="stylesheet" href="css/info-game-button.css">
   <link rel="stylesheet" href="css/story.css">
   <link rel="stylesheet" href="css/control.css">
   <link rel="stylesheet" href="css/fullscreen.css">
@@ -34,85 +35,95 @@
   <title>El Pollo Loco</title>
 </head>
 
-<body>
+<body onresize="checkWindowWitdh()">
   <header>
-    <div class="headline">
+    <div id="headline" class="headline">
       <h1>El Pollo Loco</h1>
     </div>
   </header>
   <main class="canvas-container">
     <div id="fullscreen">
-    <section class="width-100">
-        <div id="gameResult">
-          <div id="start" class="start">
-            <img src="./assets/img/9_intro_outro_screens/start/startscreen_1.png" alt="Start">
-          </div>
-          <img id="endScreen" class="ende d-none" src="./assets/img/9_intro_outro_screens/win/win_2.png">
-          <div id="menu" class="menu d-none">
-            <div id="story" class="story">
-              <span>
-                Jedes Jahr feierte Pepes Dorf das große Taco-Fest.
-                Doch dieses Mal verdunkelte sich der Himmel, als Señora Gallina,
-                ein riesiges, böses Huhn, mit ihrer Armee wilder Hühner das Fest überfiel.
-                Sie zerstörten das Dorf und stahlen das berühmte Taco-Rezept. <br><br>
-                Pepe schwor, sein Dorf zu retten und das wertvolle Rezept zurückzuholen. <br><br>
-                Begleite Pepe auf seiner gefährlichen Reise, 
-                das geheime Taco-Rezept zu finden und sein Dorf zu befreien! <br><br>
-                Aber sei vorsichtig!
-                Es wird eine heiße Mission! 🌶️
-              </span>
+      <section>
+          <canvas id="canvas" class="canvas d-none" width="720" height="480"></canvas>
+          <div id="gameResult">
+            <div id="start" class="start">
+              <div id="mobileMenuBtn" class="mobile-btn-content d-none">
+                <button class="mobile-btn" onclick="openMenu()" id="#">Menu</button>
+                <button class="mobile-btn" onclick="startGame()">Play</button>
+              </div>
+              <img src="./assets/img/9_intro_outro_screens/start/startscreen_1.png" alt="Start">
             </div>
-            <div id="control" class="controls-container d-none">
-              <div class="control">
-                <img src="assets/icon/move-left.png" alt="">
-                <span>Run Left</span>
+            <img id="endScreen" class="end-screen d-none" src="./assets/img/9_intro_outro_screens/win/win_2.png">
+            <div id="menu" class="info-menu d-none">
+              <div id="story" class="story">
+                <span>
+                  Jedes Jahr feierte Pepes Dorf das große Taco-Fest.
+                  Doch dieses Mal verdunkelte sich der Himmel, als Señora Gallina,
+                  ein riesiges, böses Huhn, mit ihrer Armee wilder Hühner das Fest überfiel.
+                  Sie zerstörten das Dorf und stahlen das berühmte Taco-Rezept. <br><br>
+                  Pepe schwor, sein Dorf zu retten und das wertvolle Rezept zurückzuholen. <br><br>
+                  Begleite Pepe auf seiner gefährlichen Reise, 
+                  das geheime Taco-Rezept zu finden und sein Dorf zu befreien! <br><br>
+                  Aber sei vorsichtig!
+                  Es wird eine heiße Mission! 🌶️
+                </span>
               </div>
-              <div class="control">
-                <img src="assets/icon/move-right.png" alt="">
-                <span>Run Right</span>
-              </div>
-              <div class="control">
-                <div class="key-jump">
-                  <img src="assets/icon/jump.png" alt="">
-                  <img src="assets/icon/space.png" alt="">
+              <div id="control" class="controls-container d-none">
+                <div class="control">
+                  <img src="assets/icon/move-left.png" alt="">
+                  <span>Run Left</span>
                 </div>
-                <span>Jump</span>
-              </div>
-              <div class="control">
-                <img src="assets/icon/throw.png" alt="">
-                <span>Throw</span>
+                <div class="control">
+                  <img src="assets/icon/move-right.png" alt="">
+                  <span>Run Right</span>
+                </div>
+                <div class="control">
+                  <div class="key-jump">
+                    <img src="assets/icon/jump.png" alt="">
+                    <img src="assets/icon/space.png" alt="">
+                  </div>
+                  <span>Jump</span>
+                </div>
+                <div class="control">
+                  <img src="assets/icon/throw.png" alt="">
+                  <span>Throw</span>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-    </section>
-    <section>
-        <canvas id="canvas" class="canvas d-none" width="720" height="480"></canvas>
-    </section>
-    <section id="fullScreenMenu">
+          <div id="mobileImprint" class="imprint mobile d-none">
+            <p>Imprint</p>
+          </div>
+      </section>
+      <section id="fullScreenMenu">
         <div class="game-menu-content">
           <div id="screenAndSound" class="fullScrenn-sound-content d-none">
             <img id="fullScreenImage" onclick="toggleFullscreen()" src="assets/icon/fullscreen.png" alt="fullscreen">
             <img id="soundIcon" onclick="world.toggleSound()" src="assets/icon/guitar.png" alt="sound">
           </div>
         </div>
-    </section>  
-    <section>
-        <div id="menuBtn" class="game-btn">
-          <button onclick="openMenu()" id="menu">Menu</button>
-          <button onclick="startGame()">Play</button>
+      </section>  
+      <section class="game-buttons">
+        <div id="menuBtn" class="game-btn-content">
+          <button class="game-btn" onclick="openMenu()" id="menu">Menu</button>
+          <button class="game-btn" onclick="startGame()">Play</button>
         </div>
         <div id="infoBtn" class="info-container d-none">
           <img onclick="openStory()" src="assets/icon/taco.png" alt="taco">
           <img onclick="openControl()" src="assets/icon/maracas.png" alt="maracas">
           <img onclick="returnToMenu()" src="assets/icon/back.png" alt="back">
         </div>
-        <div id="gameEnd" class="game-btn d-none">
-          <button onclick="restartGame()">Restart Game</button>
-          <button onclick="exitGame()">Exit Game</button>
+        <div id="gameEnd" class="game-btn-content d-none">
+          <button class="game-btn" onclick="restartGame()">Restart Game</button>
+          <button class="game-btn" onclick="exitGame()">Exit Game</button>
         </div>
-    </section>
+      </section>
     </div>
   </main>
+  <footer>
+    <div id="imprint" class="imprint">
+      <p>Imprint</p>
+    </div>
+  </footer>
 </body>
 </html>
