screen_mode_mobile_or_desktop

--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
         </div>
       </section> -->
     </div>
+    <div id="rotateScreen" class="rotateScreen d-none">
+      <div class="tenor-gif-embed" data-postid="17400422" data-share-method="host" data-aspect-ratio="1.05263" data-width="100%">
+        <a href="https://tenor.com/view/tilt-your-phone-turn-your-phone-phone-gif-17400422">Tilt Your Phone Turn Your Phone Sticker</a>
+        from <a href="https://tenor.com/search/tilt+your+phone-stickers">Tilt Your Phone Stickers</a>
+      </div> 
+      <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+    </div>
   </main>
   <footer>
     <div id="imprint" class="imprint">
