--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </header>
   <main class="width-100 height-100">
     <div id="fullscreen" class="display-flex width-100 height-100">
-      <section class="display-flex direction-column width-100">
-          <div id="gameWindow" class="game-window width-100 display-flex">
+      <section class="display-flex direction-column width-100 height-100">
+          <div id="gameWindow" class="game-window width-100 height-100 display-flex">
             <div id="start" class="start display-flex">
               <div class="back">
                 <div id="mobileMenuBtn" class="mobile-btn-content d-none">
