--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="display-flex direction-column width-100 height-100">
           <div id="gameWindow" class="game-window width-100 height-100 display-flex">
             <div id="start" class="start display-flex">
-              <div class="back">
+              <div>
                 <div id="mobileMenuBtn" class="mobile-btn-content d-none">
                   <button class="mobile-btn" onclick="openMobileMenu()">Menu</button>
                   <button class="mobile-btn" onclick="startGame()">Play</button>
@@ -102,12 +102,10 @@
                 <img onclick="returnToMobileMenu()" src="assets/icon/back.png" alt="back">
               </div>
             </div>
-            <div class="game-buttons">
-              <div id="infoBtn" class="info-container d-none">
-                <img onclick="openStory()" src="assets/icon/taco.png" alt="taco">
-                <img onclick="openControl()" src="assets/icon/maracas.png" alt="maracas">
-                <img onclick="returnToMenu()" src="assets/icon/back.png" alt="back">
-              </div>
+            <div id="infoBtn" class="info-container d-none">
+              <img onclick="openStory()" src="assets/icon/taco.png" alt="taco">
+              <img onclick="openControl()" src="assets/icon/maracas.png" alt="maracas">
+              <img onclick="returnToMenu()" src="assets/icon/back.png" alt="back">
             </div>
             <div id="gameEnd" class="restart-exit-container d-none">
               <button class="game-btn" onclick="restartGame()">Restart Game</button>
@@ -123,6 +121,16 @@
               </div>
               <div class="fullscreen-sound-btn">
                 <img id="soundIcon" onclick="world.toggleSound()" src="assets/icon/guitar.png" alt="sound">
+              </div>
+            </div>
+            <div id="mobilPlayBtn" class="mobil-play-btn-container d-none">
+              <div class="play-btn-content">
+                <span id="leftBtn" class="play-mobil-btn display-flex">&lArr;</span>
+                <span id="rightBtn" class="play-mobil-btn display-flex">&rArr;</span>
+              </div>
+              <div class="play-btn-content">
+                <span id="upBtn" class="play-mobil-btn display-flex">&uArr;</span>
+                <img id="bottleBtn" class="play-mobil-btn display-flex" src="assets/icon/bottle.png">
               </div>
             </div>
             <div id="gameEndMobil" class="restart-exit-btn-mobil d-none">
