--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <button class="game-btn" onclick="startGame()">Play</button>
               </div>
             </div>
-            <div id="menu" class="d-none info-menu height-100">
+            <div id="menu" class="d-none info-menu width-100 height-100">
               <div id="story" class="story">
                 <span>
                   Jedes Jahr feierte Pepes Dorf das große Taco-Fest.
@@ -115,7 +115,7 @@
           <div id="gameContainer" class="game-container d-none">
             <canvas id="canvas" class="canvas d-none" width="720" height="480"></canvas>
             <img id="endScreen" class="end-screen d-none" src="./assets/img/9_intro_outro_screens/win/win_2.png">
-            <div id="screenAndSound" class="fullScrenn-sound-content d-none">
+            <div id="screenAndSound" class="fullScrenn-sound-content display-flex d-none">
               <div class="fullscreen-sound-btn">
                 <img id="fullScreenImage" onclick="toggleFullscreen()" src="assets/icon/fullscreen.png" alt="fullscreen">
               </div>
@@ -124,11 +124,11 @@
               </div>
             </div>
             <div id="mobilPlayBtn" class="mobil-play-btn-container d-none">
-              <div class="play-btn-content">
+              <div class="play-btn-content display-flex ">
                 <span id="leftBtn" class="play-mobil-btn display-flex">&lArr;</span>
                 <span id="rightBtn" class="play-mobil-btn display-flex">&rArr;</span>
               </div>
-              <div class="play-btn-content">
+              <div class="play-btn-content display-flex ">
                 <span id="upBtn" class="play-mobil-btn display-flex">&uArr;</span>
                 <img id="bottleBtn" class="play-mobil-btn display-flex" src="assets/icon/bottle.png">
               </div>
@@ -140,7 +140,7 @@
           </div>
       </section>
     </div>
-    <div id="rotateScreen" class="rotateScreen d-none">
+    <div id="rotateScreen" class="rotateScreen display-flex width-100 height-100display-flex d-none">
       <div class="tenor-gif-embed" data-postid="17400422" data-share-method="host" data-aspect-ratio="1.05263" data-width="100%">
         <a href="https://tenor.com/view/tilt-your-phone-turn-your-phone-phone-gif-17400422">Tilt Your Phone Turn Your Phone Sticker</a>
         from <a href="https://tenor.com/search/tilt+your+phone-stickers">Tilt Your Phone Stickers</a>
