--- a/index.html
+++ b/index.html
@@ -140,13 +140,8 @@
           </div>
       </section>
     </div>
-    <div id="rotateScreen" class="rotateScreen display-flex width-100 height-100display-flex d-none">
-      <div class="tenor-gif-embed" data-postid="17400422" data-share-method="host" data-aspect-ratio="1.05263" data-width="100%">
-        <a href="https://tenor.com/view/tilt-your-phone-turn-your-phone-phone-gif-17400422">Tilt Your Phone Turn Your Phone Sticker</a>
-        from <a href="https://tenor.com/search/tilt+your+phone-stickers">Tilt Your Phone Stickers</a>
-      </div> 
-      <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    </div>
+    <div id="rotateScreen" class="rotateScreen display-flex width-100 height-100 display-flex d-none">
+      <iframe src="https://giphy.com/embed/PfY4nKis93ZHXMywps" width="270" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mobile-phone-intro-PfY4nKis93ZHXMywps"></a></p>
     <div id="imprintContainer" class="imprint-container display-flex direction-column width-100 height-100 d-none">
       <div class="imprint-content display-flex direction-column">
         <h1>Imprint</h1>
