--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
       </section>
     </div>
     <div id="rotateScreen" class="rotateScreen display-flex width-100 height-100 display-flex d-none">
-      <iframe src="https://giphy.com/embed/PfY4nKis93ZHXMywps" width="270" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mobile-phone-intro-PfY4nKis93ZHXMywps"></a></p>
+      <iframe src="https://giphy.com/embed/PfY4nKis93ZHXMywps" width="270" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mobile-phone-intro-PfY4nKis93ZHXMywps"></a></p>
+    </div>
     <div id="imprintContainer" class="imprint-container display-flex direction-column width-100 height-100 d-none">
       <div class="imprint-content display-flex direction-column">
         <h1>Imprint</h1>
